Tue Jul 20 04:34:56 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* configure.in: Bump version number

Sun Jul 18 17:21:10 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* === Released 2.5.0 ===

	* NEWS: updates

	* tests/testcombo.c: Fix compilation

2004-07-19  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentrycompletion.c (gtk_entry_completion_set_popup_completion):
	Fix doc comment.
	
2004-07-19  Matthias Clasen  <mclasen@redhat.com>

	Make GtkCellView public, since people seem to have uses for it, 
	it is clean API and we were just conservative in not making it 
	public initially. At the same time, get rid of GtkCellViewMenuItem,
	which doesn't have any function which can't be served by a
	GtkMenuItem with a GtkCellView child.  (#136637, Padraig O'Briain)

	* gtk/gtk.h: Include gtkcellview.h

	* gtk/Makefile.am (gtk_public_h_sources): 

	* gtk/Makefile.am (gtk_private_h_sources): 
	(gtk_c_sources): Remove gtkcellviewmenuitem.[hc]
	* gtk/gtkcombobox.c: Replace all uses of GtkCellViewMenuItem by
	GtkMenuItem with a GtkCellView child.

	* gtk/gtkcellviewmenuitem.[hc]: Removed.

2004-07-19  Matthias Clasen  <mclasen@redhat.com>

	Support inline autocompletion in entries  (#135953)
	
	* gtk/gtkentryprivate.h: 
	* gtk/gtkentrycompletion.h: 
	* gtk/gtkentrycompletion.c (gtk_entry_completion_class_init): 
	Add a new signal ::insert-prefix which can be used to override 
	the default inline-completion behaviour. Add two new boolean
	properties, :popup_completion and :inline_completion which
	determine how the possible completions should be presented.
	(gtk_entry_completion_insert_prefix): New function to request
	a prefix insertion. 

	* gtk/gtkentry.c: Add the necessary glue for inline completion. 

Sun Jul 18 15:28:24 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkdnd.c (gtk_drag_source_set, gtk_drag_dest_set): Create an
	empty target list if targets is NULL.

	* configure.in: Add check for X11/extensions/sync.h. (#147416,
	Morten Welinder)
