@@ -1,3 +1,10 @@
+Mon Jul 19 23:51:50 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtktreeview.c (gtk_tree_view_enter_notify): Don't
+	use uninitialized node pointer.  (#147911, Peter Zelezny)
+
+	* gtk/gtktreeview.c (gtk_tree_view_enter_notify): 
+
 Tue Jul 20 04:34:56 2004  Soeren Sandmann  <sandmann@daimi.au.dk>
 
 	* configure.in: Bump version number
